tests/ui/crate_local_distributed_slice/add_many_wrong_type.stderr
error[E0308]: mismatched types
  --> $DIR/add_many_wrong_type.rs:9:36
   |
LL | distributed_slice_elements!(MEOWS, NON_ARRAY);
   |                                    ^^^^^^^^^ expected `[&str; _]`, found `&str`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
